--- a/src/index.css
+++ b/src/index.css
@@ -28,7 +28,22 @@ code {
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 20px;
+  gap: 10px;
+}
+
+.sudoku-grid-header {
+  width: 400px;
+  margin: 0px;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+  text-align: center;
+}
+
+.timer {
+  display: flex;
+  justify-content: space-between;
 }
 
 .sudoku-grid {
@@ -62,4 +77,9 @@ code {
   border-radius: 5px;
   text-align: center;
   padding-bottom: 15px;
+}
+
+.dialog-footer {
+  display: flex;
+  gap: 10px;
 }
