--- a/src/index.css
+++ b/src/index.css
@@ -12,13 +12,26 @@ code {
     monospace;
 }
 
+[data-theme="light"],
+:root:not([data-theme="dark"]) {
+  --primary: #546e7a;
+  --primary-hover: #455a64;
+  --primary-focus: rgba(84, 110, 122, 0.125);
+  --primary-inverse: #fff;
+  --secondary: #ffb300;
+  --secondary-hover: #ffa000;
+  --secondary-focus: rgba(255, 179, 0, 0.125);
+  --secondary-inverse: rgba(0, 0, 0, 0.75);
+}
+
 .content {
   padding: 20px;
 }
 
 .top-bar {
   padding: 10px;
-  background-color: #546e7a;
+  background-color: #455a64;
+  /* background-color: #1e88e5; */
   color: #fff;
   text-align: center;
   font-size: 30px;
